removed google map, fixed styles for info wrap

--- a/public/assets/css/master.css
+++ b/public/assets/css/master.css
@@ -71,6 +71,7 @@ section.top {margin-top:140px; margin-bottom:20px; float:left; width:100%;}
 .contact li i.material-icons {float:left; padding-right:10px;}
 .contact li.city {margin-left:35px;}
 span.btnSpan {display:block;}
+.infoWrap {overflow:hidden; float:right; width:320px; display:block; position:relative;}
 
 /* Restaurants */
 .pageList li {width:100%; height:auto; margin-bottom:20px; background-color:#fff; box-sizing:border-box; font-size:20px; line-height:30px; box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12); -moz-box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);}
@@ -119,11 +120,15 @@ footer span.disclaimer {font-size:12px; margin-top:10px; line-height:14px;}
 	img {max-width:100%;}
 	.social {margin-right:5%;}
 	h1 {margin-left:5%;}
+	h3 {padding-left:5%;}
 	section.top .wrap {width:90%; margin:0 5%;}
 	.deal {height:auto; margin:10px 0; overflow:hidden;}
 	.contact {position:relative; height:auto; width:100%; display:block !important; box-shadow:none;}
+	.contact ul {padding:20px 5%;}
+	.getDirections {padding:0 5%;}
 	.googleMap, .mdl-button--fab.mdl-button--colored, header nav {display:none;}
 	.info {margin-left:0; margin:0 5%; width:auto;}
+	.infoWrap {width:100%; height:auto; display:block; position:relative; float:left; overflow:hidden;}
 	header, footer, footer .copyright, section.page-title {min-width:100%;}
 	.beforeFooter {display:none;}
 	footer {height:auto; position:relative; clear:both;}
